testdata/cases/analyze/writer_buffer_mutation.expected
testdata/cases/analyze/writer_buffer_mutation.go:6:8: error[writer-buffer-mutation]: io.Writer.Write must not modify the provided buffer, even temporarily
